Dummy text remove.html

--- a/index.html
+++ b/index.html
@@ -62,35 +62,35 @@
     <section class="cyh">
         <div class="para" >
             <h1 class="white habit inter">Change Your Habit</h1>
-            <p  class="white small-para inter">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <p  class="white small-para inter">To have a better life one should develop better habits.Healthy habits will make you healthy.</p>
         </div>
         <div class="display-flex images4">
             <div>
                 <img class="image-circle" src="images/image 3.png" alt="">
                 <div>
                     <h3 class="inter white cyh-h3">Movement</h3>
-                    <p class="inter cyh-p">We believe fitness should be accessible to everyone</p>
+                    <p class="inter cyh-p">Body Movement is necessary to make yourself active</p>
                 </div>
             </div>
             <div>
                 <img class="image-circle" src="images/image 2.png" alt="">
                 <div>
                     <h3 class="inter white cyh-h3">Time</h3>
-                    <p class="inter cyh-p">We believe fitness should be accessible to everyone</p>
+                    <p class="inter cyh-p">You should give enough time on regularly everyday.</p>
                 </div>
             </div>
             <div>
                 <img class="image-circle" src="images/image 4.png" alt="">
                 <div>
                     <h3 class="inter white cyh-h3">Practice</h3>
-                    <p class="inter cyh-p">We believe fitness should be accessible to everyone</p>
+                    <p class="inter cyh-p">it is said that practice makes a man perfect.</p>
                 </div>
             </div>
             <div>
                 <img class="image-circle" src="images/image 5.png" alt="">
                 <div>
                     <h3 class="inter white cyh-h3">Weight Loss</h3>
-                    <p class="inter cyh-p">We believe fitness should be accessible to everyone</p>
+                    <p class="inter cyh-p">One should focus on weight loss to be hearthy</p>
                 </div>
             </div>
         </div>
@@ -100,8 +100,8 @@
      <section class="rme display-flex">
         <div class="h1-p">
             <h1 class="run inter">Run an Extra Mile Easily</h1>
-            <p class="rme-p inter">We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With <br>
-            hundreds of professional workouts.</p>
+            <p class="rme-p inter">By doing regular exercises you will not only gain strength but also stamina.It will
+                help you to run more and more gradually.</p>
             <button id="btn-join-now" class="body-btn btn-1"> <span class="inter">Join Now</span></button>
         </div>
         <div class="runner ">
@@ -114,7 +114,7 @@
  <section>
     <div class="bmi-text-body">
         <h3 class="bmi inter">BMI Calculator</h3>
-        <p class="bmip inter" style="color:  rgba(255, 255, 255, 0.5);">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        <p class="bmip inter" style="color:  rgba(255, 255, 255, 0.5);"> BMI calculator stands for Body Mass Index. with bmi value you can check your health condition.</p>
     </div>
  </section>
  <section class="calculator">
@@ -151,7 +151,7 @@
     </div>
     <div class=" inter">
         <h2 class="inter calcualtor-h2" style="color: white;">Calculate your BMI</h2>
-        <p class="calculator-p"> We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym. </p>
+        <p class="calculator-p"> Enter your height, weight, sex, age and activity factor to calculate body mass index(bmi). </p>
         <div>
             <div class="inter">
                 <input class="input-field" type="text" placeholder="Height/cm">
@@ -181,7 +181,7 @@
  <!-- Meet our team -->
   <section>
     <h1 class="inter moth1">Meet Our Team</h1>
-    <p class="motp inter">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym. </p>
+    <p class="motp inter">We have the best of the best instructors who are renowd for doing their job. </p>
   </section >
   <section class="inter hexa-image-section">   
     <div class=" display-flex image-box-1">
@@ -237,7 +237,7 @@
   <section class="cyh">
     <div class="para" >
         <h1 class="white habit inter">Our Products</h1>
-        <p  class="white small-para inter">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        <p  class="white small-para inter">Here are some of our products to gear you up through your physical well being journey.</p>
     </div>
     <div class="display-flex images4">
         <div>
@@ -275,7 +275,7 @@
     <div class="footer-1st-div">
         <div>
             <h1 class="fitness2 orange"><i>Fitness</i></h1>
-            <h6 style="color:  rgba(255, 255, 255, 0.5);">We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</h6>
+            <h6 style="color:  rgba(255, 255, 255, 0.5);">We think that everyone, everywhere, should be able to exercise, regardless of financial situation or gym accessibility. with hundreds of training sessions with pros.</h6>
         </div>
         <div class="get-started">
             <h1>Get Started</h1>
