--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <div class="footer-1st-div">
         <div>
             <h1 class="fitness2 orange"><i>Fitness</i></h1>
-            <h6 style="color:  rgba(255, 255, 255, 0.5);">We think that everyone, everywhere, should be able to exercise, regardless of financial situation or gym accessibility. with hundreds of training sessions with pros.</h6>
+            <h6 style="color:  rgba(255, 255, 255, 0.5);">We think that everyone, everywhere, should be able to exercise,<br> regardless of financial situation or gym accessibility. <br> With hundreds of training sessions with pros.</h6>
         </div>
         <div class="get-started">
             <h1>Get Started</h1>
