--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
      <section class="rme display-flex">
         <div class="h1-p">
             <h1 class="run inter">Run an Extra Mile Easily</h1>
-            <p class="rme-p inter">By doing regular exercises you will not only gain strength but also stamina.It will
-                help you to run more and more gradually.</p>
+            <p class="rme-p inter">By doing regular exercises you will not only gain <br> strength but also stamina.It will
+                help you <br> to run more and more gradually.</p>
             <button id="btn-join-now" class="body-btn btn-1"> <span class="inter">Join Now</span></button>
         </div>
         <div class="runner ">
